# book_recommender

./: .env  Dockerfile  pyproject.toml  raw.py
.github/workflows/: ci.yml
src/: main.py  settings.py
template/: book_not_found.html  book_selection.html  no_recommendations.html  recommendations.html
tests/: test_status.py
