[tool.poetry]
name = "datasentics"
version = "0.1.0"
description = ""
authors = ["Artem Sorokin <85310022+juman-j@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.1.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pandas = "1.5.3"
python-dotenv = "^1.0.0"
pandas-stubs = "^2.0.2.230605"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
